update basic infomation

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
   
   <servlet>
     <servlet-name>a</servlet-name>
-    <servlet-class>com.stackery.servlet.a</servlet-class>
+    <servlet-class>com.renhouse.servlet.a</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>a</servlet-name>
